--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dropdown": "^1.9.2",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
+    "react-select": "^5.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
