--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@craco/craco": "^6.4.0",
     "@react-pdf/renderer": "^2.1.1",
+    "@statikly/funk": "^0.3.1",
     "@tailwindcss/forms": "^0.3.4",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
